<resources>
    <string name="app_name">Tubble</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Log out</string>

    <string name="preference_file_key">com.laundryapp.tubble.PREFERENCE_FILE_KEY</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start_up">StartUpActivity</string>

    <string name="laundry_shop">Laundry Shop</string>
    <string name="laundry_services">Laundry Service</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="select_laundry_shop">Please select laundry shop.</string>
    <string name="select_laundry_service">Please select laundry service.</string>
    <string name="input_location">Please input your location.</string>
    <string name="input_no_of_clothes">Please input no. of clothes.</string>
    <string name="input_estimated_kilo">Please input estimated kilo.</string>

    <string name="laundry_processed_new">Your laundry is\nwaiting to be accepted...</string>
    <string name="laundry_processed_accepted">Your laundry has been accepted\nand waiting to be processed...</string>
    <string name="laundry_processed_processing">Your laundry is\nbeing processed...</string>
    <string name="laundry_completed">Looks like laundry\'s done!\nThanks for booking!</string>

    <string name="disclaimer">Disclaimer:\nTubble does not hold responsibility over any damages incurred and loss of items. In case of any missing or damaged items, please contact your laundry service provider.</string>

    <string name="no_laundry_for_the_week">Seems like you did your\nlaundry for the week.\nGreat job!</string>
    <string name="no_approved_bookings">No approved bookings.</string>

    <plurals name="plural_day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <plurals name="plural_hour">
        <item quantity="one">hr</item>
        <item quantity="other">hrs</item>
    </plurals>

    <plurals name="plural_minute">
        <item quantity="one">min</item>
        <item quantity="other">mins</item>
    </plurals>

    <!--Search Dialog-->
    <string name="how_search">How would you like us to define your search?</string>
    <string name="location">Location</string>
    <string name="close">Close</string>
    <string name="service">Service</string>
    <string name="rating">Rating</string>

    <!-- Shut Down Dialog-->

    <string name="shutdown">Shut down</string>
    <string name="shutdown_text">Do you want to shut down Tubble?</string>

    <!--Assign Laundry Dialog-->
    <string name="assign_laundry_dialog_title">Assign Laundry</string>
    <string name="assign_laundry_dialog_message">Who will process the laundry?</string>
    <string name="assign">Assign</string>

    <!--View Address Dialog-->
    <string name="view_address_dialog_title">Address</string>

    <!-- Tips Fragment-->
    <string name="tips_main">Tubble is the Philippines\' first-ever laundry aid\nmobile platform used to provide and ease commu-\nication channels between laundry service provid-\ners and its consumers. Developed by consumers\nwho have experienced the inconvenience of hunt-\ning for laundry shops within Metro to help indi-\nviduals.\n\nFor many years, laundry has played a significant\nrole in our daily routine. The idea of Tubble is to\ncreate an innovative solution for students and laun-\ndry service providers allowing them to co-exist\nwith each other with ease and convenience.</string>
    <string name="tips_video_text">We get it. Laundry\'s difficult.\nThat\'s why we made this\nspecially for you!</string>
    <string name="tips_contact_us_text">If you have any concerns, feel\nfree to contact us.</string>
    <string name="say_hi">Say hi!</string>
    <string name="email_us">Lost? Just email us!</string>
    <string name="know_more">Know more about us!</string>

</resources>
