<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/tubble_blue"
        android:text="@string/tips_contact_us_text"/>

    <ImageView
        android:id="@+id/phone_button"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:scaleType="fitXY"
        android:layout_marginTop="20dp"
        android:src="@drawable/phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubble_blue"
        android:text="@string/say_hi"/>

    <ImageView
        android:id="@+id/email_button"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:layout_marginTop="20dp"
        android:src="@drawable/email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubble_blue"
        android:text="@string/email_us"/>

    <ImageView
        android:id="@+id/know_more_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:layout_marginTop="20dp"
        android:src="@drawable/web_copy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubble_blue"
        android:text="@string/know_more"/>
</LinearLayout>