<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63ffffff">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/tubble_yellow"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/tubble_yellow"
            android:contentDescription="@string/close"
            android:scaleType="fitXY"
            android:src="@drawable/close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/how_search"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/spinner_bg">
            <Spinner
                android:id="@+id/service_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/spinner_bg">
            <Spinner
                android:id="@+id/rating_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/location_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/spinner_bg"
            android:gravity="center_horizontal"
            android:hint="@string/location"
            android:padding="5dp" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/tubble_yellow"
            android:contentDescription="@string/location"
            android:scaleType="fitCenter"
            android:src="@drawable/confirmsearch" />

    </LinearLayout>

</RelativeLayout>